@@ -1,3 +1,11 @@
+2010-04-15  Stan Shebs  <stan@codesourcery.com>
+
+	* frame.c: Include tracepoint.h.
+	(get_current_frame): Allow a trace frame to be an alternate source
+	of stack frame data.
+	* tracepoint.c (tfind_1): Don't try to get current stack frame if
+	it won't succeed.
+
 2010-04-15  Pedro Alves  <pedro@codesourcery.com>
 
 	* ppc-linux-tdep.c (bsd_uthread_solib_loaded): Always pass 0 for
